Fixed overflow and height bug

--- a/assets/css/admin_main.css
+++ b/assets/css/admin_main.css
@@ -1,3 +1,15 @@
+html{
+    position:relative;
+    min-height: 94%;
+    overflow-x: hidden;
+}
+
+/*Normalise html and body elements */
+html,body{
+    margin:0;
+    padding:0;
+}
+
 body {
     padding-top: 50px;
 }
@@ -14,16 +26,6 @@ body {
 .footer-block {
     text-align: center;
     padding: 10px 0px 10px 0px;
-}
-
-html{
-    position:relative;
-    min-height: 100%;
-}
-/*Normalise html and body elements */
-html,body{
-    margin:0;
-    padding:0;
 }
 
 footer {
